--- a/escaladenaturelle/normandie.html
+++ b/escaladenaturelle/normandie.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Climbing Spots</title>
-    <script src="script.js" defer></script>
+    <script src="../script.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -14,26 +14,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
     <header>
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg p-4">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">Climbing Spots</a>
-                <button id="lightmode" class="btn btn-light me-5 order-lg-2">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
-                        <path
-                            d="M14.768 3.96v.001l-.002-.005a9.08 9.08 0 0 0-.218-.779c-.13-.394.21-.8.602-.67.29.096.575.205.855.328l.01.005A10.002 10.002 0 0 1 12 22a10.002 10.002 0 0 1-9.162-5.985l-.004-.01a9.722 9.722 0 0 1-.329-.855c-.13-.392.277-.732.67-.602.257.084.517.157.78.218l.004.002A9 9 0 0 0 14.999 6a9.09 9.09 0 0 0-.231-2.04ZM16.5 6c0 5.799-4.701 10.5-10.5 10.5-.426 0-.847-.026-1.26-.075A8.5 8.5 0 1 0 16.425 4.74c.05.413.075.833.075 1.259Z">
-                        </path>
-                    </svg>
-                </button>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <div class="d-flex align-items-center order-lg-2">
+                    <button id="lightmode" class="btn border-0 me-5 mb-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                            <path fill="currentColor"
+                                d="M14.768 3.96v.001l-.002-.005a9.08 9.08 0 0 0-.218-.779c-.13-.394.21-.8.602-.67.29.096.575.205.855.328l.01.005A10.002 10.002 0 0 1 12 22a10.002 10.002 0 0 1-9.162-5.985l-.004-.01a9.722 9.722 0 0 1-.329-.855c-.13-.392.277-.732.67-.602.257.084.517.157.78.218l.004.002A9 9 0 0 0 14.999 6a9.09 9.09 0 0 0-.231-2.04ZM16.5 6c0 5.799-4.701 10.5-10.5 10.5-.426 0-.847-.026-1.26-.075A8.5 8.5 0 1 0 16.425 4.74c.05.413.075.833.075 1.259Z">
+                            </path>
+                        </svg>
+                    </button>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-5">
+                    <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" id="link" href="../index.html">Accueil</a>
+                            <a class="nav-link" href="../index.html">Accueil</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -41,23 +43,20 @@
                                 Escalade naturelle
                             </a>
                             <ul class="dropdown-menu bg-success-subtle" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="../escaladenaturelle/paysdelaloire.html">Pays de la
-                                        Loire</a></li>
-                                <li><a class="dropdown-item" href="../escaladenaturelle/normandie.html">Normandie</a>
-                                </li>
+                                <li><a class="dropdown-item" href="paysdelaloire.html">Pays de la Loire</a></li>
+                                <li><a class="dropdown-item" href="normandie.html">Normandie</a></li>
                                 <li><a class="dropdown-item" href="#">Bretagne</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBloc" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Escalade en bloc intérieur
                             </a>
-                            <ul class="dropdown-menu bg-warning-subtle" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="../bloc/paysdelaloirebloc.html">Pays de la Loire</a>
-                                </li>
-                                <li><a class="dropdown-item" href="#">Normandie</a></li>
-                                <li><a class="dropdown-item" href="#">Bretagne</a></li>
+                            <ul class="dropdown-menu bg-warning-subtle" aria-labelledby="navbarDropdownBloc">
+                                <li><a class="dropdown-item" href="../bloc/paysdelaloirebloc.html">Pays de la Loire</a></li>
+                                <li><a class="dropdown-item" href="../bloc/normandie.html">Normandie</a></li>
+                                <li><a class="dropdown-item" href="../bloc/bretagne.html">Bretagne</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -183,7 +182,7 @@
         </div>
     </main>
 
-    <footer class=" text-center mt-auto py-3">
+    <footer class="text-danger text-center mt-auto py-3">
         <div class="container">
             <p>&copy; 2024 Spots d'escalade en France</p>
         </div>
